# eraser-io-mcp-server

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  MCP_USAGE.md  README.md  docker-compose.yml  main.py  pyproject.toml  render_eraser_diagram.py  server.py  test_render_eraser_diagram.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
eraser_io_mcp_server/: __init__.py  eraser-standard-icons.csv  main.py  render_eraser_diagram.py  server.py
